salesforce/force-app/main/default/objects/Tracking_Event__c/Tracking_Event__c.object-meta.xml
<CustomObject>
    <description>The append-only timeline. Every applied event writes one row, including events that did NOT change status because they arrived out of order.</description>
    <label>Tracking Event</label>
    <nameField>
        <displayFormat>EVT-{0000}</displayFormat>
        <label>Tracking Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>