salesforce/force-app/main/default/objects/Tracking_Event__c/fields/Applied_By__c.field-meta.xml
<CustomField>
    <fullName>Applied_By__c</fullName>
    <description>Provenance: how this event was determined. Lets accuracy problems be traced to rules vs LLM.</description>
    <label>Applied By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>LLM</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>