salesforce/force-app/main/default/objects/Tracking_Event__c/fields/Event_At__c.field-meta.xml
<CustomField>
    <fullName>Event_At__c</fullName>
    <description>When the event actually happened, not when it was captured.</description>
    <label>Event At</label>
    <type>DateTime</type>
</CustomField>