salesforce/force-app/main/default/objects/Tracking_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Matches the extraction contract in BUILD_SPEC section 5.3 exactly, so rules, the LLM and the state machine all speak one vocabulary.</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>order_placed</fullName>
                </value>
                <value>
                    <fullName>order_confirmed</fullName>
                </value>
                <value>
                    <fullName>shipped</fullName>
                </value>
                <value>
                    <fullName>out_for_delivery</fullName>
                </value>
                <value>
                    <fullName>delivered</fullName>
                </value>
                <value>
                    <fullName>delivery_failed</fullName>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                </value>
                <value>
                    <fullName>return_requested</fullName>
                </value>
                <value>
                    <fullName>return_pickup_scheduled</fullName>
                </value>
                <value>
                    <fullName>return_picked_up</fullName>
                </value>
                <value>
                    <fullName>return_received</fullName>
                </value>
                <value>
                    <fullName>return_rejected</fullName>
                </value>
                <value>
                    <fullName>refund_initiated</fullName>
                </value>
                <value>
                    <fullName>refund_completed</fullName>
                </value>
                <value>
                    <fullName>exchange_shipped</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>