salesforce/force-app/main/default/objects/Tracking_Event__c/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <label>Purchase</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Purchase__c</referenceTo>
    <relationshipLabel>Tracking Events</relationshipLabel>
    <relationshipName>Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>