salesforce/force-app/main/default/objects/Tracking_Event__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <label>Return</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Return__c</referenceTo>
    <relationshipLabel>Tracking Events</relationshipLabel>
    <relationshipName>Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>