salesforce/force-app/main/default/objects/Tracking_Event__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Tracking Events</relationshipLabel>
    <relationshipName>Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>