salesforce/force-app/main/default/objects/Tracking_Event__c/fields/Source_Message__c.field-meta.xml
<CustomField>
    <fullName>Source_Message__c</fullName>
    <description>Provenance: which message produced this event.</description>
    <label>Source Message</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Inbound_Message__c</referenceTo>
    <relationshipLabel>Tracking Events</relationshipLabel>
    <relationshipName>Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>